--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/bower_components/animate.css/animate.css" />
+  <link rel="stylesheet" href="/bower_components/animate.css/animate.min.css" />
   <link rel="stylesheet" href="/bower_components/sweetalert2/dist/sweetalert2.css" />
   <!-- endbower -->
   <!-- endbuild -->
