Edited youtube iframe links to enable HD and deleted unwanted scripts in Videos module

--- a/app/index.html
+++ b/app/index.html
@@ -135,7 +135,7 @@
             <iframe 
               width="100%" 
               height="400" 
-              src="https://www.youtube.com/embed/FLCHa26XcRc?rel=0&amp;showinfo=0" 
+              src="https://www.youtube.com/embed/FLCHa26XcRc?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -224,7 +224,7 @@
               <h2 class="carousel-header">Ausbildungsfilm</h2>
               <iframe 
                 class="video-element" 
-                src="https://www.youtube.com/embed/foJKD9_sMu8?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/foJKD9_sMu8?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -235,7 +235,7 @@
               <h2 class="carousel-header">Produktfilm</h2>
               <iframe 
                 class="video-element"
-                src="https://www.youtube.com/embed/82IbpMrqDis?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/82IbpMrqDis?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -246,7 +246,7 @@
               <h2 class="carousel-header">Imagefilm</h2>
               <iframe 
                 class="video-element"
-                src="https://www.youtube.com/embed/7_47kWVJlrE?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/7_47kWVJlrE?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -257,7 +257,7 @@
               <h2 class="carousel-header">Veranstaltungsdokumentation</h2>
               <iframe 
                 class="video-element" 
-                src="https://www.youtube.com/embed/Acp2m5pb65U?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/Acp2m5pb65U?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -268,7 +268,7 @@
               <h2 class="carousel-header">Interviews</h2>
               <iframe 
                 class="video-element" 
-                src="https://www.youtube.com/embed/8Ksks0Z8ww4?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/8Ksks0Z8ww4?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -279,7 +279,7 @@
               <h2 class="carousel-header">Animationsfilm</h2>
               <iframe 
                 class="video-element" 
-                src="https://www.youtube.com/embed/kVg9rwa390c?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/kVg9rwa390c?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -290,7 +290,7 @@
               <h2 class="carousel-header">Animationsfilm</h2>
               <iframe 
                 class="video-element" 
-                src="https://www.youtube.com/embed/sb2J4PU0IOY?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/sb2J4PU0IOY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -301,7 +301,7 @@
               <h2 class="carousel-header">Animationsfilm</h2>
               <iframe 
                 class="video-element"
-                src="https://www.youtube.com/embed/ixYTiecEw-M?rel=0&amp;showinfo=0" 
+                src="https://www.youtube.com/embed/ixYTiecEw-M?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
