Edited youtube link

--- a/app/index.html
+++ b/app/index.html
@@ -276,7 +276,7 @@
               <h2 class="carousel-header">Animationsfilm</h2>
               <iframe 
                 class="video-element" 
-                src="https://www.youtube.com/embed/kVg9rwa390c?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+                src="https://www.youtube.com/embed/tqPBf9ICvWY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
