Inline web-container style in the html, deleted file web-container

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,14 @@
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
+  <style>
+    .web-container {
+      position: relative;
+      z-index: 2;
+      background: white;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body data-spy="scroll" data-target="#nav">
