--- a/app/index.html
+++ b/app/index.html
@@ -17,14 +17,6 @@
   <!-- endbower -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
-  <style>
-    .web-container {
-      position: relative;
-      z-index: 2;
-      background: white;
-      overflow: hidden;
-    }
-  </style>
 </head>
 
 <body data-spy="scroll" data-target="#nav">
@@ -282,7 +274,7 @@
               <h2 class="carousel-header">Animationsfilm</h2>
               <iframe 
                 class="video-element" 
-                src="https://www.youtube.com/embed/tqPBf9ICvWY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+                src="https://www.youtube.com/embed/KQdrYL6jcWY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
                 frameborder="0" 
                 allowfullscreen>
               </iframe>
@@ -466,28 +458,6 @@
               die Story, die gekonnte Kameraführung, eine intelligente Dramaturgie, eine ideenreiche Inszenierung. Was hier
               nicht zählt, sind Ausreden.
             </p>
-            <!-- <div class="hero-image__foreground--gunshots">
-              <img id="first_gunshot" class="gunshots" src="images/gunshots.png" alt="gunshots">
-              <img id="second_gunshot" class="gunshots" src="images/gunshots.png" alt="gunshots">
-              <img id="third_gunshot" class="gunshots" src="images/gunshots.png" alt="gunshots">
-              <img id="fourth_gunshot" class="gunshots" src="images/gunshots.png" alt="gunshots">
-              <img id="fifth_gunshot" class="gunshots" src="images/gunshots.png" alt="gunshots">
-              <div id="blunt_container">
-                <div class="smoke-group"></div>
-              </div>
-              <div id="blunt_container_2">
-                <div class="smoke-group"></div>
-              </div>
-              <div id="blunt_container_3">
-                <div class="smoke-group"></div>
-              </div>
-              <div id="blunt_container_4">
-                <div class="smoke-group"></div>
-              </div>
-              <div id="blunt_container_5">
-                <div class="smoke-group"></div>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
