Added new styles to modules

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/bower_components/animate.css/animate.min.css" />
-  <link rel="stylesheet" href="/bower_components/sweetalert2/dist/sweetalert2.css" />
+  <link rel="stylesheet" href="/bower_components/sweetalert2/dist/sweetalert2.min.css" />
   <!-- endbower -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
@@ -533,7 +533,7 @@
   <script src="/bower_components/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
   <script src="/bower_components/scrollmagic/scrollmagic/uncompressed/plugins/debug.addIndicators.js"></script>
   <script src="/bower_components/scrollmagic/scrollmagic/uncompressed/plugins/animation.gsap.js"></script>
-  <script src="/bower_components/sweetalert2/dist/sweetalert2.js"></script>
+  <script src="/bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   
