--- a/app/index.html
+++ b/app/index.html
@@ -95,9 +95,9 @@
         <video class="cover__media" autoplay loop muted playsinline>
           <source src="videos/BjoerkCover.mp4" type="video/mp4">
           <source src="videos/BjoerkCover.webm" type="video/webm">
-          <!-- <source src="videos/BjoerkCover.m4v" type="video/m4v">
+          <source src="videos/BjoerkCover.m4v" type="video/m4v">
           <source src="videos/BjoerkCover.ogv" type="video/ogg">
-          <source src="videos/BjoerkCover.ogg" type="application/ogg"> -->
+          <source src="videos/BjoerkCover.ogg" type="application/ogg">
         </video>
       </div>
       <div class="cover__container">
@@ -128,8 +128,6 @@
             das Wichtigste.</p>
           <div class="description__content--media">
             <iframe 
-              width="100%" 
-              height="400" 
               src="https://www.youtube.com/embed/FLCHa26XcRc?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
