Edited cover styles all screen

--- a/app/index.html
+++ b/app/index.html
@@ -202,8 +202,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid">
-        <div class="clapboard__background"></div>
+      <div class="clapboard__background container-fluid">
       </div>
     </div>
     <div id="carousel" class="carousel container-fluid">
