Changed media queries to bootstrap breakpoints

--- a/app/index.html
+++ b/app/index.html
@@ -168,7 +168,7 @@
                 <div class="clapboard__inner__section">
                   <h4 class="clapboard__inner__section--header-style">Imagefilm</h4>
                   <hr class="clapboard__inner__section--line-style">
-                  <p class="clapboard__inner__section--desc-style">Inspirieren Sie! In aller Kürze soll der Imagefilm eine Marke, ein Unternehmen, eine Marke, ein Unternehmen...
+                  <p class="clapboard__inner__section--desc-style">Inspirieren Sie! In aller Kürze soll der Imagefilm eine Marke, ein Unternehmen, eine Marke, ein ...
                   </p>
                   <button id="imagefilm_btn" type="button" class="btn btn-info btn--autosize">mehr</button>
                 </div>
@@ -177,7 +177,7 @@
                 <div class="clapboard__inner__section">
                   <h4 class="clapboard__inner__section--header-style">Veranstaltungs-<br>dokumentation</h4>
                   <hr class="clapboard__inner__section--line-style">
-                  <p class="clapboard__inner__section--desc-style">Laden Sie ein! Es kann ein Messefilm sein. Oder ein Eventfilm. Oder ein Konferenzfilm ...
+                  <p class="clapboard__inner__section--desc-style">Laden Sie ein! Es kann ein Messefilm sein. Oder ein Eventfilm. Oder ein ...
                   </p>
                   <button id="veranstaltungsdokumentation_btn" type="button" class="btn btn-info btn--autosize">mehr</button>
                 </div>
@@ -186,7 +186,7 @@
                 <div class="clapboard__inner__section">
                   <h4 class="clapboard__inner__section--header-style">Interviews</h4>
                   <hr class="clapboard__inner__section--line-style">
-                  <p class="clapboard__inner__section--desc-style">Erzählen Sie! Aktuelles, Hintergründiges, Bewegendes oder Unterhaltsames. Ob zur Person...</p>
+                  <p class="clapboard__inner__section--desc-style">Erzählen Sie! Aktuelles, Hintergründiges, Bewegendes oder Unterhaltsames. Ob zur Person ...</p>
                   <button id="interviews_btn" type="button" class="btn btn-info btn--autosize">mehr</button>
                 </div>
               </div>
