--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <title>Bjoerk Movies</title>
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" href="./favicon.ico?v=2" />
   <!-- Place favicon.ico in the root directory -->
   <!-- build:css styles/main.css -->
   <!-- bower:css -->
