Added new video formats fpr cover and Edited youtube links

--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,10 @@
         <video class="cover__media" autoplay loop muted playsinline>
           <source src="videos/BjoerkCover.mp4" type="video/mp4">
           <source src="videos/BjoerkCover.webm" type="video/webm">
+          <source src="videos/BjoerkCover.webm" type="video/webm">
+          <source src="videos/BjoerkCover.m4v" type="video/m4v">
+          <source src="videos/BjoerkCover.ogv" type="video/ogg">
+          <source src="videos/BjoerkCover.ogg" type="application/ogg">
         </video>
       </div>
       <div class="cover__container">
@@ -126,7 +130,7 @@
             das Wichtigste.</p>
           <div class="description__content--media">
             <iframe 
-              src="https://www.youtube.com/embed/FLCHa26XcRc?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/FLCHa26XcRc?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -213,7 +217,7 @@
             <h2 class="carousel-header">Ausbildungsfilm</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube.com/embed/foJKD9_sMu8?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/foJKD9_sMu8?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -222,7 +226,7 @@
             <h2 class="carousel-header">Produktfilm</h2>
             <iframe 
               class="video-element"
-              src="https://www.youtube.com/embed/82IbpMrqDis?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/82IbpMrqDis?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -231,7 +235,7 @@
             <h2 class="carousel-header">Imagefilm</h2>
             <iframe 
               class="video-element"
-              src="https://www.youtube.com/embed/7_47kWVJlrE?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/7_47kWVJlrE?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -240,7 +244,7 @@
             <h2 class="carousel-header">Veranstaltungsdokumentation</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube.com/embed/Acp2m5pb65U?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/Acp2m5pb65U?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -249,7 +253,7 @@
             <h2 class="carousel-header">Interviews</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube.com/embed/8Ksks0Z8ww4?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/8Ksks0Z8ww4?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -258,7 +262,7 @@
             <h2 class="carousel-header">Animationsfilm</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube.com/embed/KQdrYL6jcWY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/KQdrYL6jcWY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -267,7 +271,7 @@
             <h2 class="carousel-header">Animationsfilm</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube.com/embed/sb2J4PU0IOY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/sb2J4PU0IOY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -276,7 +280,7 @@
             <h2 class="carousel-header">Animationsfilm</h2>
             <iframe 
               class="video-element"
-              src="https://www.youtube.com/embed/ixYTiecEw-M?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube-nocookie.com/embed/ixYTiecEw-M?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
