Deleted _smoke-effect.scss and updated docs

--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@
             das Wichtigste.</p>
           <div class="description__content--media">
             <iframe 
-              src="https://www.youtube-nocookie.com/embed/FLCHa26XcRc?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/FLCHa26XcRc?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -217,7 +217,7 @@
             <h2 class="carousel-header">Ausbildungsfilm</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube-nocookie.com/embed/foJKD9_sMu8?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/foJKD9_sMu8?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -226,7 +226,7 @@
             <h2 class="carousel-header">Produktfilm</h2>
             <iframe 
               class="video-element"
-              src="https://www.youtube-nocookie.com/embed/82IbpMrqDis?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/82IbpMrqDis?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -235,7 +235,7 @@
             <h2 class="carousel-header">Imagefilm</h2>
             <iframe 
               class="video-element"
-              src="https://www.youtube-nocookie.com/embed/7_47kWVJlrE?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/7_47kWVJlrE?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -244,7 +244,7 @@
             <h2 class="carousel-header">Veranstaltungsdokumentation</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube-nocookie.com/embed/Acp2m5pb65U?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/Acp2m5pb65U?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -253,7 +253,7 @@
             <h2 class="carousel-header">Interviews</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube-nocookie.com/embed/8Ksks0Z8ww4?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/8Ksks0Z8ww4?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -262,7 +262,7 @@
             <h2 class="carousel-header">Animationsfilm</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube-nocookie.com/embed/KQdrYL6jcWY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/KQdrYL6jcWY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -271,7 +271,7 @@
             <h2 class="carousel-header">Animationsfilm</h2>
             <iframe 
               class="video-element" 
-              src="https://www.youtube-nocookie.com/embed/sb2J4PU0IOY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/sb2J4PU0IOY?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
@@ -280,7 +280,7 @@
             <h2 class="carousel-header">Animationsfilm</h2>
             <iframe 
               class="video-element"
-              src="https://www.youtube-nocookie.com/embed/ixYTiecEw-M?rel=0&amp;showinfo=0&amp;vq=hd1080" 
+              src="https://www.youtube.com/embed/ixYTiecEw-M?rel=0&amp;showinfo=0&amp;vq=hd1080" 
               frameborder="0" 
               allowfullscreen>
             </iframe>
