--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,15 @@
   <!-- endbower -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
+  <style>
+    .nymphette {
+      font-family: "nymphette";
+    }
+    .web-container {
+      background: white;
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body data-spy="scroll" data-target="#nav">
