Added script for google analytics im header

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,15 @@
   <!-- endbower -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99564533-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-99564533-2');
+  </script>
   <style>
     .nymphette {
       font-family: "nymphette";
@@ -514,7 +523,8 @@
           <div class="col-8">
             <div class="footer__second-left">
               <p class="footer__second-left__text">
-                &copy;Björk Movies ist eine Unit der Anders Björk Werbeagentur GmbH, Ideenjäger
+                &copy;Björk Movies ist eine Unit der 
+                <a href="http://www.bjoerk.de/" target="_blank">Anders Björk GmbH</a>, Ideenjäger
               </p>
             </div>
           </div>
